# rslox

./: .gitignore  Cargo.toml  bench.sh
benches/: benchmark.rs
src/: bytecode.rs  common.rs  compiler.rs  disassembler.rs  lexer.rs  lib.rs  main.rs  stack.rs  value.rs  vm.rs
src/compiler/: error.rs
src/lexer/: error.rs  tests.rs
src/vm/: error.rs
test_files/many/: constants_long.lox
tests/: generate.rs  integration_tests.rs
tests/common/: mod.rs
tests/snapshots/: file@assignment@infix_operator.lox.snap  file@assignment@local.lox.snap  file@assignment@to_this.lox.snap  file@assignment@undefined.lox.snap  file@base@assignment@associativity.lox.snap  file@base@assignment@global.lox.snap  file@base@assignment@grouping.lox.snap  file@base@assignment@prefix_operator.lox.snap  file@base@assignment@syntax.lox.snap  file@base@block@empty.lox.snap  file@base@block@scope.lox.snap  file@base@bool@equality.lox.snap  file@base@call@string.lox.snap  file@base@class@empty.lox.snap  file@base@class@inherited_method.lox.snap  file@base@class@reference_self.lox.snap  file@base@closure@assign_to_shadowed_later.lox.snap  file@base@closure@close_over_method_parameter.lox.snap  file@base@closure@closed_closure_in_function.lox.snap  file@base@closure@nested_closure.lox.snap  file@base@closure@open_closure_in_function.lox.snap  file@base@closure@reuse_closure_slot.lox.snap  file@base@comments@line_at_eof.lox.snap  file@base@comments@only_line_comment.lox.snap  file@base@constructor@arguments.lox.snap  file@base@constructor@call_init_early_return.lox.snap  (+276 more)
(+8 files in other folders)
