[package]
name = "rslox"
version = "0.1.0"
edition = "2021"

[dependencies]
miette = { version = "7.2.0", features = ["fancy"] }
num-traits = "0.2"
num-derive = "0.4.2"
thiserror = "1.0.63"
clap = { version = "4.5.17", features = ["derive"] }

[dev-dependencies]
insta = "1.40.0"
paste = "1.0.15"
rstest = "0.22.0"

[lints.rust]
rust_2018_idioms = "deny"
unused_must_use = "deny"

[lints.clippy]
new_without_default = "allow"

[features]
debug_trace = []
debug_disassemble = []
default = []
